fixed layout issue in root css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,6 +82,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     zoom: 0.7;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex-grow: 1;
+    width: 100%;
   }
 }
 
@@ -102,9 +107,17 @@ code {
     font-family: itc-avant-garde-gothic-pro;
     font-family: 'Noto Sans Display', cursive;
     width: 100%;
-    height: 100%;
     position: relative;
     overflow-x: clip;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+html {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 body {
